Add appropriate background to SettingsWindow highlight colors.
Highlight colors now have the editor background color behind them, so that they accurately represent the final color in the editor. Maybe this should have a border color here?

--- a/SharpEditor/Windows/SettingsWindow.axaml
+++ b/SharpEditor/Windows/SettingsWindow.axaml
@@ -160,6 +160,7 @@
 																<local:LostFocusUpdateBindingBehavior Text="{Binding Color, Converter={StaticResource colorToStringConv}}"/>
 															</i:Interaction.Behaviors>
 														</TextBox>
+														<Border Grid.Column="4" Background="{StaticResource ThemeBackgroundBrush}"/>
 														<Border Grid.Column="4">
 															<Border.Background>
 																<SolidColorBrush Color="{Binding Color}"/>
