--- a/SharpEditor/Windows/SharpDocumentEditor.axaml
+++ b/SharpEditor/Windows/SharpDocumentEditor.axaml
@@ -158,6 +158,7 @@
 				ToolTip.Placement="Pointer"
 				ToolTip.HorizontalOffset="20"
 				ToolTip.VerticalOffset="10"
+				SearchResultsBrush="{StaticResource EditorSearchResultBrush}"
 				> <!--PointerWheelChanged="OnTextPreviewMouseWheel"-->
 				<avaloniaEdit:TextEditor.KeyBindings>
 					<KeyBinding Gesture="Ctrl+D" Command="{Binding DuplicateCommand}"/>
