--- a/SharpEditor/AppStyles.axaml
+++ b/SharpEditor/AppStyles.axaml
@@ -3,6 +3,7 @@
 		xmlns:sys="using:System"
 		xmlns:windows="using:SharpEditor.Windows"
 		xmlns:editing="using:AvaloniaEdit.Editing"
+		xmlns:search="using:AvaloniaEdit.Search"
 		xmlns:rendering="using:AvaloniaEdit.Rendering"
 		xmlns:folding="using:AvaloniaEdit.Folding">
 	
@@ -13,6 +14,11 @@
 	</Design.PreviewWith>
 
 	<!-- Add Styles Here -->
+
+	<Style Selector=":is(Control)">
+		<Setter Property="ToolTip.HorizontalOffset" Value="10"/>
+		<Setter Property="ToolTip.VerticalOffset" Value="10"/>
+	</Style>
 	
 	<Style Selector="editing|TextArea">
 		<Setter Property="SelectionBrush" Value="{StaticResource EditorSelectionBrush}"/>
@@ -25,7 +31,7 @@
 		</Style>
 	</Style>
 
-	<Style Selector=":is(Control).toolbar Button, Button.subtle">
+	<Style Selector=":is(Control).toolbar Button, Button.subtle, :is(search|SearchPanel) Button">
 		<Setter Property="Background" Value="Transparent"/>
 		<Setter Property="BorderBrush" Value="Transparent"/>
 		<Setter Property="BorderThickness" Value="1"/>
@@ -1015,5 +1021,234 @@
 		<Setter Property="Margin" Value="0"/>
 		<Setter Property="Padding" Value="8,5"/>
 	</Style>
-	
+
+	<Style Selector="ToggleButton.expanderToggle">
+		<Setter Property="Foreground" Value="{StaticResource ThemeForegroundLowBrush}"/>
+		<Setter Property="Template">
+			<ControlTemplate>
+				<Border Name="PART_ArrowBorder" Background="Transparent" Padding="4">
+					<Path Data="M 3,2 L 9,6 3,10 z"
+						  Stretch="None"
+						  VerticalAlignment="Center"
+						  HorizontalAlignment="Center"
+						  Width="12" Height="12"
+						  Fill="{TemplateBinding Foreground}"/>
+				</Border>
+			</ControlTemplate>
+		</Setter>
+		
+		<Style Selector="^:checked /template/ Path">
+			<Setter Property="RenderTransform">
+				<TransformGroup>
+					<RotateTransform Angle="90"/>
+				</TransformGroup>
+			</Setter>
+		</Style>
+
+		<Style Selector="^:pointerover /template/ Border#PART_ArrowBorder">
+			<Setter Property="Background" Value="{StaticResource ThemeControlHighlightMidBrush}"/>
+		</Style>
+		<Style Selector="^:pressed /template/ Border#PART_ArrowBorder">
+			<Setter Property="Background" Value="{StaticResource ThemeControlHighlightLowBrush}"/>
+		</Style>
+		<Style Selector="^:disabled">
+			<Setter Property="Opacity" Value="0.5"/>
+		</Style>
+	</Style>
+
+	<Style Selector="ToggleButton.searchTextBoxToggleButton">
+		<Setter Property="Background" Value="{StaticResource ThemeControlMidBrush}"/>
+		<Setter Property="BorderBrush" Value="{StaticResource ThemeBorderLowColor}"/>
+		<Setter Property="BorderThickness" Value="1"/>
+		<Setter Property="Padding" Value="4"/>
+		<Setter Property="HorizontalContentAlignment" Value="Center"/>
+		<Setter Property="VerticalContentAlignment" Value="Center"/>
+
+		<Setter Property="ToolTip.HorizontalOffset" Value="10"/>
+		<Setter Property="ToolTip.VerticalOffset" Value="10"/>
+
+		<Setter Property="Template">
+			<ControlTemplate>
+				<ContentPresenter Name="PART_ContentPresenter"
+					Padding="{TemplateBinding Padding}"
+					HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+					VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+					Background="{TemplateBinding Background}"
+					BorderBrush="{TemplateBinding BorderBrush}"
+					BorderThickness="{TemplateBinding BorderThickness}"
+					Content="{TemplateBinding Content}"
+					ContentTemplate="{TemplateBinding ContentTemplate}"
+					CornerRadius="0"
+					RecognizesAccessKey="True"/>
+			</ControlTemplate>
+		</Setter>
+
+		<Style Selector="^:pointerover">
+			<Setter Property="Cursor" Value="Arrow"/>
+		</Style>
+		
+		<Style Selector="^:checked /template/ ContentPresenter#PART_ContentPresenter">
+			<Setter Property="Background" Value="{StaticResource ThemeControlHighlightMidBrush}"/>
+		</Style>
+		<Style Selector="^:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+			<Setter Property="Background" Value="{StaticResource ThemeControlHighlightLowBrush}"/>
+			<Setter Property="BorderBrush" Value="{StaticResource ThemeBorderHighBrush}"/>
+		</Style>
+		<Style Selector="^:checked:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+			<Setter Property="Background" Value="{StaticResource ThemeControlHighlightMidBrush}"/>
+		</Style>
+		<Style Selector="^:pressed /template/ ContentPresenter#PART_ContentPresenter">
+			<Setter Property="Background" Value="{StaticResource ThemeControlHighlightLowBrush}"/>
+		</Style>
+		<Style Selector="^:disabled">
+			<Setter Property="Opacity" Value="0.5"/>
+		</Style>
+	</Style>
+
+	<Style Selector="search|SearchPanel">
+		<Setter Property="BorderThickness" Value="1 1 1 1"/>
+		<Setter Property="CornerRadius" Value="0"/>
+		<Setter Property="BorderBrush" Value="{StaticResource ThemeBorderMidBrush}"/>
+		<Setter Property="Background" Value="{StaticResource ThemeControlMidBrush}"/>
+		<Setter Property="Focusable" Value="True"/>
+		<Setter Property="Margin" Value="0 5 5 0"/>
+		<Setter Property="FontSize" Value="{DynamicResource SearchPanelFontSize}"/>
+		<Setter Property="FontFamily" Value="{DynamicResource ApplicationFont}"/>
+		<Setter Property="Template">
+			<ControlTemplate>
+				<Border Name="PART_Border"
+						BorderThickness="{TemplateBinding BorderThickness}"
+						CornerRadius="{TemplateBinding CornerRadius}"
+						BorderBrush="{TemplateBinding BorderBrush}"
+						Background="{TemplateBinding Background}"
+						HorizontalAlignment="Right"
+						VerticalAlignment="Top"
+						Padding="3 5 5 5">
+					<Grid ColumnDefinitions="Auto,Auto,Auto"
+						  RowDefinitions="Auto,Auto">
+						<ToggleButton Name="Expander"
+									  Classes="expanderToggle"
+									  VerticalAlignment="Center"
+									  IsVisible="{Binding !TextEditor.IsReadOnly, RelativeSource={RelativeSource TemplatedParent}}"
+									  IsChecked="{Binding IsReplaceMode, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
+									  Grid.Column="0"
+									  Grid.Row="0"
+									  Margin="0, 0, 3, 0"/>
+						<StackPanel Orientation="Horizontal"
+									Grid.Column="2"
+									Grid.Row="0">
+							<TextBox Watermark="Search..."
+									 Name="PART_searchTextBox"
+									 Grid.Column="1"
+									 Grid.Row="0"
+									 Width="265"
+									 Margin="0,0,0,0"
+									 VerticalContentAlignment="Center"
+									 Text="{Binding SearchPattern, RelativeSource={RelativeSource TemplatedParent}}">
+								<TextBox.InnerRightContent>
+									<StackPanel Orientation="Horizontal" Margin="5 0 0 0">
+										<ToggleButton Classes="searchTextBoxToggleButton"
+													  IsChecked="{Binding $parent[search:SearchPanel].MatchCase, Mode=TwoWay}"
+													  ToolTip.Tip="Match Case"
+													  VerticalAlignment="Center">
+											<ContentControl Classes="matchCaseIcon"/>
+										</ToggleButton>
+										<ToggleButton Classes="searchTextBoxToggleButton"
+													  IsChecked="{Binding $parent[search:SearchPanel].WholeWords, Mode=TwoWay}"
+													  ToolTip.Tip="Match Whole Words"
+													  Margin="3,0,0,0"
+													  VerticalAlignment="Center">
+											<ContentControl Classes="matchWholeWordIcon"/>
+										</ToggleButton>
+										<ToggleButton Classes="searchTextBoxToggleButton"
+													  IsChecked="{Binding $parent[search:SearchPanel].UseRegex, Mode=TwoWay}"
+													  ToolTip.Tip="Use Regex"
+													  Margin="3,0,0,0"
+													  VerticalAlignment="Center">
+											<ContentControl Classes="matchRegexIcon"/>
+										</ToggleButton>
+									</StackPanel>
+								</TextBox.InnerRightContent>
+							</TextBox>
+							<Button Margin="3,0,0,0"
+									VerticalAlignment="Center"
+									Command="{x:Static search:SearchCommands.FindPrevious}">
+								<ToolTip.Tip>
+									<TextBlock Text="Find Previous"/>
+								</ToolTip.Tip>
+								<ContentControl Classes="prevSmallIcon"/>
+							</Button>
+							<Button Margin="0,0,0,0"
+									VerticalAlignment="Center"
+									Command="{x:Static search:SearchCommands.FindNext}">
+								<ToolTip.Tip>
+									<TextBlock Text="Find Next"/>
+								</ToolTip.Tip>
+								<ContentControl Classes="nextSmallIcon"/>
+							</Button>
+							<Button Margin="0,0,0,0"
+									VerticalAlignment="Center"
+									Command="{x:Static search:SearchCommands.CloseSearchPanel}"
+									Focusable="True"
+									Classes="closeButton">
+								<ContentControl Classes="closeIcon"/>
+							</Button>
+						</StackPanel>
+						<StackPanel Name="ReplaceButtons"
+									IsVisible="{Binding #Expander.IsChecked}"
+									Orientation="Horizontal"
+									Margin="0 5 0 0 "
+									Grid.Column="2"
+									Grid.Row="1">
+							<TextBox Name="ReplaceBox" Watermark="Replace..."
+									 IsVisible="{Binding IsReplaceMode, RelativeSource={RelativeSource TemplatedParent}}"
+									 Grid.Column="1"
+									 Grid.Row="1"
+									 Width="265"
+									 Margin="0 0 0 0"
+									 Text="{Binding ReplacePattern, RelativeSource={RelativeSource TemplatedParent}}"/>
+							<Button Margin="3, 0, 0, 0"
+									VerticalAlignment="Center"
+									Command="{x:Static search:SearchCommands.ReplaceNext}">
+								<ToolTip.Tip>
+									<TextBlock Text="Replace Next"/>
+								</ToolTip.Tip>
+								<ContentControl Classes="replaceIcon"/>
+							</Button>
+							<Button Margin="0, 0, 0, 0"
+									VerticalAlignment="Center"
+									Command="{x:Static search:SearchCommands.ReplaceAll}">
+								<ToolTip.Tip>
+									<TextBlock Text="Replace All"/>
+								</ToolTip.Tip>
+								<ContentControl Classes="replaceAllIcon"/>
+							</Button>
+						</StackPanel>
+						<!-- The default implementation of SearchPanel throws an error if there is no PART_MessageView. -->
+						<Border Name="UNUSED_MessageViewInvisibleHolder"
+								IsVisible="False">
+							<StackPanel Name="PART_MessageView"
+										IsVisible="False"
+										Orientation="Horizontal"
+										Margin="0 5 0 0">
+								<TextBlock Name="PART_MessageContent"
+										   FontSize="11"/>
+							</StackPanel>
+						</Border>
+					</Grid>
+				</Border>
+			</ControlTemplate>
+		</Setter>
+
+		<Style Selector="^/template/ Button">
+			<Setter Property="BorderThickness" Value="0"/>
+		</Style>
+
+		<Style Selector="^ /template/ :is(Control)">
+			<Setter Property="ToolTip.HorizontalOffset" Value="10"/>
+			<Setter Property="ToolTip.VerticalOffset" Value="10"/>
+		</Style>
+
+	</Style>
+
 </Styles>
