--- a/SharpEditor/IconStyles.axaml
+++ b/SharpEditor/IconStyles.axaml
@@ -109,6 +109,12 @@
 		<PathGeometry x:Key="ReplaceEndGeometry" Figures="M 1,9 v 6 h 6 v -6 Z" FillRule="NonZero"/>
 		<PathGeometry x:Key="ReplaceEndManyGeometry" Figures="M 1,9 h 6 v 6 h -6 Z M 8,9 h 2 v 5 h -2 Z M 11,9 h 2 v 4 h -2 Z" FillRule="NonZero"/>
 		
+		<PathGeometry x:Key="DialogueInfoIconGeometry" Figures="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM11 11V17H13V11H11ZM11 7V9H13V7H11Z"/>
+		<PathGeometry x:Key="DialogueQuestionIconGeometry" Figures="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM11 15V17H13V15H11ZM13 13.3551C14.4457 12.9248 15.5 11.5855 15.5 10C15.5 8.067 13.933 6.5 12 6.5C10.302 6.5 8.88637 7.70919 8.56731 9.31346L10.5288 9.70577C10.6656 9.01823 11.2723 8.5 12 8.5C12.8284 8.5 13.5 9.17157 13.5 10C13.5 10.8284 12.8284 11.5 12 11.5C11.4477 11.5 11 11.9477 11 12.5V14H13V13.3551Z"/>
+		<PathGeometry x:Key="DialogueWarningIconGeometry" Figures="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM11 15V17H13V15H11ZM11 7V13H13V7H11Z"/>
+		<PathGeometry x:Key="DialogueErrorIconGeometry" Figures="M12.8659 3.00017L22.3922 19.5002C22.6684 19.9785 22.5045 20.5901 22.0262 20.8662C21.8742 20.954 21.7017 21.0002 21.5262 21.0002H2.47363C1.92135 21.0002 1.47363 20.5525 1.47363 20.0002C1.47363 19.8246 1.51984 19.6522 1.60761 19.5002L11.1339 3.00017C11.41 2.52187 12.0216 2.358 12.4999 2.63414C12.6519 2.72191 12.7782 2.84815 12.8659 3.00017ZM10.9999 16.0002V18.0002H12.9999V16.0002H10.9999ZM10.9999 9.00017V14.0002H12.9999V9.00017H10.9999Z"/>
+		<PathGeometry x:Key="DialogueOtherIconGeometry" Figures="M9.95401 2.2106C11.2876 1.93144 12.6807 1.92263 14.0449 2.20785C14.2219 3.3674 14.9048 4.43892 15.9997 5.07103C17.0945 5.70313 18.364 5.75884 19.4566 5.3323C20.3858 6.37118 21.0747 7.58203 21.4997 8.87652C20.5852 9.60958 19.9997 10.736 19.9997 11.9992C19.9997 13.2632 20.5859 14.3902 21.5013 15.1232C21.29 15.7636 21.0104 16.3922 20.6599 16.9992C20.3094 17.6063 19.9049 18.1627 19.4559 18.6659C18.3634 18.2396 17.0943 18.2955 15.9997 18.9274C14.9057 19.559 14.223 20.6294 14.0453 21.7879C12.7118 22.067 11.3187 22.0758 9.95443 21.7906C9.77748 20.6311 9.09451 19.5595 7.99967 18.9274C6.90484 18.2953 5.63539 18.2396 4.54272 18.6662C3.61357 17.6273 2.92466 16.4164 2.49964 15.1219C3.41412 14.3889 3.99968 13.2624 3.99968 11.9992C3.99968 10.7353 3.41344 9.60827 2.49805 8.87524C2.70933 8.23482 2.98894 7.60629 3.33942 6.99923C3.68991 6.39217 4.09443 5.83576 4.54341 5.33257C5.63593 5.75881 6.90507 5.703 7.99967 5.07103C9.09364 4.43942 9.7764 3.3691 9.95401 2.2106ZM11.9997 14.9992C13.6565 14.9992 14.9997 13.6561 14.9997 11.9992C14.9997 10.3424 13.6565 8.99923 11.9997 8.99923C10.3428 8.99923 8.99967 10.3424 8.99967 11.9992C8.99967 13.6561 10.3428 14.9992 11.9997 14.9992Z"/>
+
 	</Styles.Resources>
 
 	<Style Selector="ContentControl.newIcon">
@@ -918,6 +924,76 @@
 						   Foreground="{StaticResource ThemeForegroundLowBrush}"
 						   Width="{TemplateBinding Width}"
 						   Height="{TemplateBinding Height}"/>
+			</ControlTemplate>
+		</Setter>
+	</Style>
+
+	<Style Selector="ContentControl.dialogueInfoIcon">
+		<Setter Property="Width" Value="32"/>
+		<Setter Property="Height" Value="32"/>
+		<Setter Property="Template">
+			<ControlTemplate>
+				<Path Data="{StaticResource DialogueInfoIconGeometry}"
+					  Fill="{StaticResource ThemeForegroundLowBrush}"
+					  Stretch="Uniform"
+					  Width="{TemplateBinding Width}"
+					  Height="{TemplateBinding Height}"/>
+			</ControlTemplate>
+		</Setter>
+	</Style>
+
+	<Style Selector="ContentControl.dialogueQuestionIcon">
+		<Setter Property="Width" Value="32"/>
+		<Setter Property="Height" Value="32"/>
+		<Setter Property="Template">
+			<ControlTemplate>
+				<Path Data="{StaticResource DialogueQuestionIconGeometry}"
+					  Fill="{StaticResource ThemeForegroundLowBrush}"
+					  Stretch="Uniform"
+					  Width="{TemplateBinding Width}"
+					  Height="{TemplateBinding Height}"/>
+			</ControlTemplate>
+		</Setter>
+	</Style>
+
+	<Style Selector="ContentControl.dialogueWarningIcon">
+		<Setter Property="Width" Value="32"/>
+		<Setter Property="Height" Value="32"/>
+		<Setter Property="Template">
+			<ControlTemplate>
+				<Path Data="{StaticResource DialogueWarningIconGeometry}"
+					  Fill="{StaticResource ThemeAccentBrush}"
+					  Stretch="Uniform"
+					  Width="{TemplateBinding Width}"
+					  Height="{TemplateBinding Height}"/>
+			</ControlTemplate>
+		</Setter>
+	</Style>
+
+	<Style Selector="ContentControl.dialogueErrorIcon">
+		<Setter Property="Width" Value="32"/>
+		<Setter Property="Height" Value="32"/>
+		<Setter Property="Template">
+			<ControlTemplate>
+				<Path Data="{StaticResource DialogueErrorIconGeometry}"
+					  Fill="{StaticResource ThemeAccentBrush3}"
+					  Stretch="Uniform"
+					  Width="{TemplateBinding Width}"
+					  Height="{TemplateBinding Height}"/>
+			</ControlTemplate>
+		</Setter>
+	</Style>
+
+	<Style Selector="ContentControl.dialogueOtherIcon">
+		<Setter Property="Width" Value="32"/>
+		<Setter Property="Height" Value="32"/>
+		<Setter Property="Template">
+			<ControlTemplate>
+				<Path Data="{StaticResource DialogueOtherIconGeometry}"
+					  Fill="{StaticResource ThemeForegroundLowBrush}"
+					  Stretch="Uniform"
+					  Width="{TemplateBinding Width}"
+					  Height="{TemplateBinding Height}"/>
 			</ControlTemplate>
 		</Setter>
 	</Style>
