Update to Avalonia 11.1.2 from 11.0.11.
Updates to NuGet packages, and some bug fixes this brought up: Change to RadialGradientBrush, change to resource management (and turns out the resources in question were not necessary, and have been removed), and found an issue with GetCurrentEditor() being accessed before initialisation had finished.

--- a/SharpEditor/AppStyles.axaml
+++ b/SharpEditor/AppStyles.axaml
@@ -1112,7 +1112,7 @@
 		<Setter Property="Background" Value="{StaticResource ThemeControlMidBrush}"/>
 		<Setter Property="Focusable" Value="True"/>
 		<Setter Property="Margin" Value="0 5 5 0"/>
-		<Setter Property="FontSize" Value="{DynamicResource SearchPanelFontSize}"/>
+		<Setter Property="FontSize" Value="{DynamicResource FontSizeNormal}"/>
 		<Setter Property="FontFamily" Value="{DynamicResource ApplicationFont}"/>
 		<Setter Property="Template">
 			<ControlTemplate>
