Add Find and Replace menu items.
There are now MenuItems in the editor window for Find and Replace, which opens the SearchPanel in the currently open editor, along with the appropriate gesture/hotkey. Appropriate find icon has been added.

--- a/SharpEditor/Windows/SharpEditorWindow.axaml
+++ b/SharpEditor/Windows/SharpEditorWindow.axaml
@@ -141,6 +141,17 @@
 					</MenuItem.Icon>
 				</MenuItem>
 				<Separator/>
+				<MenuItem Header="Find" Command="{Binding FindCommand}" InputGesture="Ctrl+F">
+					<MenuItem.Icon>
+						<ContentControl Classes="findIcon"/>
+					</MenuItem.Icon>
+				</MenuItem>
+				<MenuItem Header="Replace" Command="{Binding FindReplaceCommand}" InputGesture="Ctrl+H">
+					<MenuItem.Icon>
+						<ContentControl Classes="replaceIcon"/>
+					</MenuItem.Icon>
+				</MenuItem>
+				<Separator/>
 				<MenuItem Header="Settings..." Command="{Binding ShowSettingsWindowClick}">
 					<MenuItem.Icon>
 						<ContentControl Classes="settingsIcon"/>
