--- a/SharpEditor/App.axaml
+++ b/SharpEditor/App.axaml
@@ -8,6 +8,7 @@
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
 				<ResourceInclude Source="/ThemeResources.axaml"/>
+				<ResourceInclude Source="/Completion/SharpCompletionList.axaml"/>
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
 	</Application.Resources>
