--- a/SharpEditor/Windows/SharpEditorWindow.axaml
+++ b/SharpEditor/Windows/SharpEditorWindow.axaml
@@ -18,6 +18,7 @@
 		<KeyBinding Gesture="Ctrl+Shift+S" Command="{Binding SaveAllCommand}"/>
 		<KeyBinding Gesture="Ctrl+G" Command="{Binding GenerateCommand}"/>
 		<KeyBinding Gesture="Ctrl+Shift+G" Command="{Binding GeneratePopulateCommand}"/>
+		<KeyBinding Gesture="Ctrl+Shift+P" Command="{Binding SettingsCommand}"/>
 	</Window.KeyBindings>
 
 	<Window.Styles>
@@ -152,7 +153,7 @@
 					</MenuItem.Icon>
 				</MenuItem>
 				<Separator/>
-				<MenuItem Header="Settings..." Command="{Binding ShowSettingsWindowClick}">
+				<MenuItem Header="Settings..." Command="{Binding ShowSettingsWindowClick}" InputGesture="Ctrl+Shift+P">
 					<MenuItem.Icon>
 						<ContentControl Classes="settingsIcon"/>
 					</MenuItem.Icon>
